--- a/index.html
+++ b/index.html
@@ -860,22 +860,17 @@
       </div>
     </section>
 
-
-
-
     <!-- swiper Clients  -->
     <Section class="Clients">
 
       <div class="container">
-        <div class="row">
+        <div class="row p-4">
 
           <div class="col-12 col-lg-6" >
             <div class="Title">
               <h4 class="text-center">Clients are <br /> Loving Our App</h4>
             </div>
           </div>
-
-
 
           <div class="col-12 col-lg-6">
 
