--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Landin Page App</title>
 
   <!-- Css -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="Assets/css/style.css" />
 
   <!-- icons -->
 
@@ -1490,7 +1490,6 @@
   </main>
 
   <!-- js -->
-  <script src="Assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <script>
@@ -1521,9 +1520,11 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
