--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <!-- icons -->
 
-  <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet" />
-  <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
-  <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
+  <link href="your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet" />
+  <link href="your-path-to-fontawesome/css/brands.css" rel="stylesheet" />
+  <link href="your-path-to-fontawesome/css/solid.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <!--fonts -->
@@ -263,8 +263,8 @@
               Save, spend & manage money in your pocket.
             </p>
             <div class="Images">
-              <img src="/Assets/images/Google_Play.svg" alt="" />
-              <img src="/Assets/images/download.png" alt="" />
+              <img src="Assets/images/Google_Play.svg" alt="" />
+              <img src="Assets/images/download.png" alt="" />
 
 
             </div>
@@ -287,8 +287,8 @@
           <div class="col-12 col-md-12 col-lg-7 col-xl-4">
             <div class="mob_img">
 
-              <img src="/Assets/images/hero-phone-1-alUYYsti.png" class="Img_one" alt="" />
-              <img src="/Assets/images/hero-phone-2-OMvdz_xu.png" class="Img_two" alt="" />
+              <img src="Assets/images/hero-phone-1-alUYYsti.png" class="Img_one" alt="" />
+              <img src="Assets/images/hero-phone-2-OMvdz_xu.png" class="Img_two" alt="" />
 
             </div>
 
@@ -371,8 +371,8 @@
         <div class="row">
           <div class="col-md-12 col-lg-5 col-12">
             <div class="Feature_img">
-              <img src="/Assets/images/phone-tt5TGFUO.png" class="img_one" alt="" />
-              <img src="/Assets/images/card-bqkzwcPD.png" class="img_two" alt="" />
+              <img src="Assets/images/phone-tt5TGFUO.png" class="img_one" alt="" />
+              <img src="Assets/images/card-bqkzwcPD.png" class="img_two" alt="" />
             </div>
 
           </div>
@@ -599,7 +599,7 @@
 
         <div class="swiper-wrapper ">
           <div class="swiper-slide">
-            <img src="/Assets/images/01swiper.png" alt="" />
+            <img src="Assets/images/01swiper.png" alt="" />
             <h4 >Step 1. Advanced budget management</h4>
             <p>
               Consequat ut cras nisl, enim purus in facilisi. Ipsum amet, lectus
@@ -610,7 +610,7 @@
 
           </div>
           <div class="swiper-slide">
-            <img src="/Assets/images/swiper2.png" alt="" />
+            <img src="Assets/images/swiper2.png" alt="" />
             <h4>Step 2. Latest transaction history</h4>
             <p>
               Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu
@@ -618,7 +618,7 @@
             </p>
           </div>
           <div class="swiper-slide">
-            <img src="/Assets/images/swiper 3.png" alt="" />
+            <img src="Assets/images/swiper 3.png" alt="" />
             <h4>Step 3. Transfers to people from your contact list</h4>
             <p>
               Proin volutpat mollis egestas. Nam luctus facilisis ultrices.
@@ -626,7 +626,7 @@
             </p>
           </div>
           <div class="swiper-slide">
-            <img src="/Assets/images/swiper 4.png" alt="" />
+            <img src="Assets/images/swiper 4.png" alt="" />
             <h4>Step 4. Card-to-card transfers</h4>
             <p>
               A sed lorem felis, pulvinar pharetra. At tempus, vel sed faucibus amet
@@ -634,7 +634,7 @@
             </p>
           </div>
           <div class="swiper-slide">
-            <img src="/Assets/images/swiper 4.png" alt="" />
+            <img src="Assets/images/swiper 4.png" alt="" />
             <h4>Step 4. Card-to-card transfers</h4>
             <p>
               A sed lorem felis, pulvinar pharetra. At tempus, vel sed faucibus amet
@@ -642,7 +642,7 @@
             </p>
           </div>
           <div class="swiper-slide">
-            <img src="/Assets/images/swiper 4.png" alt="" />
+            <img src="Assets/images/swiper 4.png" alt="" />
             <h4>Step 4. Card-to-card transfers</h4>
             <p>
               A sed lorem felis, pulvinar pharetra. At tempus, vel sed faucibus amet
@@ -652,7 +652,7 @@
 
         </div>
         <div class="swiper_frame">
-          <img src="/Assets/images/phone-frame-E3LZaK2X.png" />
+          <img src="Assets/images/phone-frame-E3LZaK2X.png" />
         </div>
 
 
@@ -740,8 +740,8 @@
 
           <div class="col-12  col-lg-6">
             <div class="images_transfer">
-              <img src="/Assets/images/2pbgki_w.png" class="img_one" alt="" />
-              <img src="/Assets/images/card-bqkzwcPD.png" class="img_two" alt="" />
+              <img src="Assets/images/2pbgki_w.png" class="img_one" alt="" />
+              <img src="Assets/images/card-bqkzwcPD.png" class="img_two" alt="" />
             </div>
 
           </div>
@@ -757,8 +757,8 @@
         <div class="row">
           <div class="col-12  col-lg-6">
             <div class="images_transfer">
-              <img src="/Assets/images/trans.png" alt="" class="img_one" />
-              <img src="/Assets/images/trans2.png" alt="" class="img_Two" />
+              <img src="Assets/images/trans.png" alt="" class="img_one" />
+              <img src="Assets/images/trans2.png" alt="" class="img_Two" />
             </div>
 
           </div>
@@ -932,7 +932,7 @@
                       temporibus laboriosam! Perspiciatis, dolore minus.</p>
 
                     <div class="profile">
-                      <img src="/Assets/images/ddddpng.png" alt="">
+                      <img src="Assets/images/ddddpng.png" alt="">
                       <span class="name">
                         <h6>mr.jhon</h6>
                         <p>project Manger</p>
@@ -991,7 +991,7 @@
                       temporibus laboriosam! Perspiciatis, dolore minus.</p>
 
                     <div class="profile">
-                      <img src="/Assets/images/ddddpng.png" alt="">
+                      <img src="Assets/images/ddddpng.png" alt="">
                       <span class="name">
                         <h6>mr.jhon</h6>
                         <p>project Manger</p>
@@ -1048,7 +1048,7 @@
                       temporibus laboriosam! Perspiciatis, dolore minus.</p>
 
                     <div class="profile">
-                      <img src="/Assets/images/ddddpng.png" alt="">
+                      <img src="Assets/images/ddddpng.png" alt="">
                       <span class="name">
                         <h6>mr.jhon</h6>
                         <p>project Manger</p>
@@ -1265,7 +1265,7 @@
         <div class="row">
           <div class="col-12">
             <div class="sub_box">
-              <img src="/Assets/images/download.svg" />
+              <img src="Assets/images/download.svg" />
               <h6>Subscribe to our newsletter to stay informed about latest updates
               </h6>
               <form class="input-group input-group-lg">
@@ -1439,8 +1439,8 @@
               <li class="Footer_menu_item" >Account</li>
             </ul>
             <div class="googel">
-              <img src="/Assets/images/Google_Play.svg" />
-              <img src="/Assets/images/download.png" />
+              <img src="Assets/images/Google_Play.svg" />
+              <img src="Assets/images/download.png" />
 
             </div>
 
