--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
           <div class="col-12 col-md-12 col-lg-5 col-xl-6 content">
             <h1>Manage All Your<br /> Money in One App
             </h1>
-            <p>We offer you a new generation of the mobile banking.<br />
-              Save, spend & manage money in your pocket.
+            <p>We offer you a new generation of the mobile banking.
             </p>
             <div class="Images"> 
               
@@ -401,7 +400,6 @@
                     <div class="item_Box">
 
                       <div class="img">
-                       
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:v="https://vecta.io/nano" width="38" height="38"
                           fill="none">
                           <path
@@ -618,7 +616,7 @@
             <h4 >Step 1. Advanced budget management</h4>
             <p>
               Consequat ut cras nisl, enim purus in facilisi. Ipsum amet, lectus
-              malesuada  sollicitudin accumsan. Id sem elit vellectus..
+              malesuada  sollicitudin accumsan. 
             </p>
 
 
@@ -628,7 +626,7 @@
             <h4>Step 2. Latest transaction history</h4>
             <p>
               Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu
-              sociis tristique quisque hac in consectetur condimentum.
+              sociis tristique quisque hac in .
             </p>
           </div>
           <div class="swiper-slide">
@@ -636,12 +634,12 @@
             <h4>Step 3. Transfers to people from your contact list</h4>
             <p>
               Proin volutpat mollis egestas. Nam luctus facilisis ultrices.
-              Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
+              Pellentesque volutpat ligula est. Mattis fermentum, 
             </p>
           </div>
           <div class="swiper-slide">
             <img src="Assets/images/swiper 4.png" alt="" />
-            <h4>Step 4. Card-to-card transfers</h4>
+            <h4>Step 4.Card-to-card transfers</h4>
             <p>
               A sed lorem felis, pulvinar pharetra. At tempus, vel sed faucibus amet
               sit elementum sed erat. Id nunc blandit pharetra facilisis
@@ -652,7 +650,7 @@
             <h4>Step 4. Card-to-card transfers</h4>
             <p>
               A sed lorem felis, pulvinar pharetra. At tempus, vel sed faucibus amet
-              sit elementum sed erat. Id nunc blandit pharetra facilisis
+              sit elementum sed erat. Id nunc blandit .
             </p>
           </div>
           <div class="swiper-slide">
@@ -660,7 +658,7 @@
             <h4>Step 4. Card-to-card transfers</h4>
             <p>
               A sed lorem felis, pulvinar pharetra. At tempus, vel sed faucibus amet
-              sit elementum sed erat. Id nunc blandit pharetra facilisis
+              sit elementum sed erat. Id nunc blandit pharetra .
             </p>
           </div>
 
