lastt Edit landpage

--- a/index.html
+++ b/index.html
@@ -752,8 +752,9 @@
 
           <div class="col-12  col-lg-6">
             <div class="images_transfer">
-              <img src="Assets/images/2pbgki_w.png" class="img_one" alt="" />
-              <img src="Assets/images/card-bqkzwcPD.png" class="img_two" alt="" />
+              <img src="Assets/images/trans.png" alt="" class="img_one" />
+              <img src="Assets/images/trans2.png" alt="" class="img_Two" />
+
             </div>
 
           </div>
@@ -762,26 +763,26 @@
       </div>
     </section>
 
-    <!--money Transfer 2-->
+    <!--Recive_contact-->
 
     <section class="Recive_contact">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-12  col-lg-6">
             <div class="images_Contact">
-              <img src="Assets/images/trans.png" alt="" class="img_one" />
-              <img src="Assets/images/trans2.png" alt="" class="img_Two" />
+              <img src="Assets/images/2pbgki_w.png" class="img_one" alt="" />
+              <img src="Assets/images/card-bqkzwcPD.png" class="img_two" alt="" />
             </div>
 
           </div>
           <div class="col-12 col-md-12  col-lg-6">
             <div class="content_Contact">
-              <h3 style="font-size: 2rem ">Receive payment from  international bank details</h3>
+              <h3>Receive payment from  international bank details</h3>
 
               <div class="Feature_items">
                 <div class="row">
                   <div class="col-lg-6 mt-2">
-                    <div class="item_Box_">
+                    <div class="item_Box">
                       <div class="img p-2">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:v="https://vecta.io/nano" width="28" height="28"
                           fill="none">
@@ -809,7 +810,7 @@
                     </div>
                   </div>
                   <div class="col-lg-6 mt-2">
-                    <div class="item_Box_">
+                    <div class="item_Box">
                       <div class="img p-2">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:v="https://vecta.io/nano" width="28" height="28"
                           fill="none">
@@ -1082,10 +1083,10 @@
 
           <div class="col-12 col-lg-5">
             <div class="title">
-              <h5>Any questions? 
+              <h5>Any questions? <br />
                 Check out the FAQs
               </h5>
-              <p>Still have unanswered questions and need to get<br /> in touch?
+              <p>Still have unanswered questions and need to get in touch?
               </p>
             </div>
 
@@ -1139,7 +1140,7 @@
           </div>
 
           <div class="col-12 col-lg-7">
-            <div class="Questions_Accordin">
+            <div class="Questions_Accordin mt-4">
               <div class="accordion" id="accordionExample">
 
                 <div class="accordion-item">
