--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,7 @@
             <div class='Card'>
               <div class='Card_side Front'>
                 <div class="Image grenn">
-                  <img src="/Assets/images/download (5).svg" />
+                  <img src="Assets/images/download (5).svg" />
 
                 </div>
                   <div class='Details'>
@@ -1319,7 +1319,7 @@
                       <div class='Card'>
                         <div class='Card_side Front'>
                           <div class="Image white">
-                            <img src="/Assets/images/download (4).svg" />
+                            <img src="Assets/images/download (4).svg" />
           
                           </div>
                             <div class='Details'>
