--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@
             <div class='Card'>
               <div class='Card_side Front'>
                 <div class="Image blue">
-                  <img src="/Assets/images/download (1).svg" />
+                  <img src="Assets/images/download (1).svg" />
                 </div>
                   <div class='Details'>
                       <ul>
@@ -1315,6 +1315,7 @@
               </div>
           </div>
           </div>
+          
               <div class="col-12 col-lg-4">
                       <div class='Card'>
                         <div class='Card_side Front'>
